Use ArrayList instead of stream